style.css
@import url("https://fonts.googleapis.com/css2?family=Livvic&family=Poppins:wght@300;400;700&family=Raleway&display=swap");

/****GENERAL CONFIG STYLES****/
* {
  box-sizing: border-box;
}

body {
  font-family: "Poppins", sans-serif;
  margin: 0;
  padding: 0;
  line-height: 1.4;
}

.lg-heading {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 70px;
  color: #2a2b40;
  margin-bottom: 0;

}

h2 {
  font-family: "Poppins";
  font-weight: 700;
  font-size: 1.5rem;
  color: #169fa4;
}

h3 {
  color: #233567;
  font-family: "Poppins", sans-serif;
  font-weight: 700;
}

h4 {
  font-weight: 100;
  color: #697c91;
}

p {
  color: #74769e;
  font-family: "Raleway", sans-serif;
  font-size: 1.4rem;
  margin: 0;
}

li {
  list-style: none;
}

/****BUTTONS****/
button {
  padding: 1rem 2rem;
  font-size: 20px;
  font-family: "Raleway", sans-serif;
  font-weight: 200;
  color: #fff;
  background-color: #6d5ad8;
  border-radius: 81px;

  border: 1px solid #6d5ad8;
  margin-top: 4rem;
}
.menu {
  display: none;
}
.download-btns {
  display: inline-block;
  margin: 1rem 0;
}

#google-store-btn {
  margin-right: 20px;
}

/****HEADER****/
header {
  display: flex;
  padding: 1rem 4rem;
  justify-content: space-between;
  background: linear-gradient(90deg, white 60%, #6853df 40%);
}

/*** HERO ****/
.hero {
  display: flex;
  /* flex-flow: row wrap; */
  justify-content: space-between;
  height: 90vh;
  padding: 4rem;
  transition: all 0.5s ease;
  background: linear-gradient(90deg, white 60%, #6853df 40%);
}


.hero-content {
  max-width: 600px;
  display: flex;
  flex-direction: column;
  height: 80vh;
  justify-content: space-between;

  /* height: 100vh; */
}

.hero-img {
  height: 90vh;
  /* transition: all 0.5s ease-in; */
}

/*** ABOUT SECTION ****/
.about-section {
  /* overflow: hidden; */
  /* padding: 8rem 0; */
  display: grid;
  grid-template-columns: repeat(2, minmax(300px, 1fr));
  grid-auto-flow: dense;
  grid-gap: 4rem;
  /* display: flex;*/
  overflow: hidden;
  padding: 4rem;
}

.give-advice {
  grid-column: 2;
}

.first-img {
  grid-column: 1;
}

.about-info {
  display: flex;
  text-align: justify;
}

.about-img {
  height: fit-content;
  width: fit-content;
  margin-right: 20px;
  margin-top: 10px;
}

/*** Try Section****/
.try-section {
  display: flex;
  justify-content: space-between;
  padding: 0 4rem;
}

.try-left {
  align-self: center;
}

.try {
  font-size: 4rem;
  color: #222a41;
  font-weight: 500;
}

.success {
  font-weight: 200;
}

/*****Footer****/

.footer {
  color: #fff;
  background-color: #6d5ad8;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 50px;
  padding: 4rem;
  font-weight: 100;
}

.footer h4 {
  color: #fff;
}

.features,
.company {
  justify-self: center;
}

.social {
  display: flex;
  /* justify-content: space-between; */
}
.footer-links {
  margin-left: 1.5rem;
  align-self: center;
}

/* MEDIA QUERY */

@media screen and (max-width: 768px) {
  .logo {
    max-width: 150px;
  }

  .menu {
    display: flex;
  }

  header {
    padding: 1rem;
    background: #fff;
  }

  .hero {
    display: block;
    text-align: center;
    padding: 0 2rem;
    background: #fff;
    height: 100vh;
  }

  .db {
    max-width: 150px;
  }
  .hero-img {
    display: none;
  }

  .about-section {
    padding: 2rem;
    display: block;
  }

  .about-item {
    margin-bottom: 2rem;
  }

  .lg-heading {
    margin-top: 20vh;
    font-size: 2.5rem;
  }

  .hero-paragraph {
    font-size: 1rem;
  }

  .try-section {
    display: block;
    text-align: center;
    padding: 2rem;
  }

  .try {
    font-size: 2rem;
  }

  img {
    max-width: 350px;
  }

  .download-btns {
    display: flex;
    justify-content: center;
  }

  .footer {
    display: block;
    text-align: center;
  }

  .social {
    display: block;
  }

  .footer-links {
    margin: 0;
  }
}

@media screen and (max-width: 400px) {
  .about-section,
  .try-section {
    padding: 2rem 1rem;
  }

  h2 {
    font-size: 24px;
  }

  h3 {
    font-size: 18px;
  }
  h4 {
    font-size: 14px;
  }
}

